1.0
-----
* debug messages added
* small changes